<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/story">

    <fragment
        android:id="@+id/timeline"
        android:name="com.example.foreverus.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" />
    <fragment
        android:id="@+id/memories"
        android:name="com.example.foreverus.MemoriesFragment"
        android:label="@string/title_memories"
        tools:layout="@layout/fragment_memories" />
    <fragment
        android:id="@+id/story"
        android:name="com.example.foreverus.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/letters"
        android:name="com.example.foreverus.LettersFragment"
        android:label="@string/title_letters"
        tools:layout="@layout/fragment_letters" />
    <fragment
        android:id="@+id/songs"
        android:name="com.example.foreverus.SongsFragment"
        android:label="@string/title_songs"
        tools:layout="@layout/fragment_songs" />
    <fragment
        android:id="@+id/settings"
        android:name="com.example.foreverus.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/menu_more"
        android:name="com.example.foreverus.MenuFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_menu" />
    
    <fragment
        android:id="@+id/adventure_board"
        android:name="com.example.foreverus.AdventureBoardFragment"
        android:label="@string/title_adventure_board"
        tools:layout="@layout/fragment_adventure_board" />

</navigation>
