<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_appearance"
        android:title="Appearance"
        android:icon="@drawable/ic_baseline_brush_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save_story"
        android:title="@string/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_story"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dictate"
        android:title="Dictate"
        android:icon="@drawable/ic_baseline_mic_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export_to_pdf"
        android:title="@string/action_export_to_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_read_aloud"
        android:title="Read Aloud"
        android:icon="@drawable/ic_baseline_volume_up_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_undo"
        android:title="Undo"
        android:icon="@drawable/ic_baseline_undo_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_redo"
        android:title="Redo"
        android:icon="@drawable/ic_baseline_redo_24"
        app:showAsAction="ifRoom" />
</menu>
